[project]
name = "haystack-ai-tutorials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "anthropic>=0.84.0",
    "cohere>=5.20.7",
    "datasets>=4.6.1",
    "duckduckgo-search>=8.1.1",
    "fastembed>=0.7.4",
    "google-search-results>=2.4.2",
    "haystack-ai>=2.25.2",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.5",
    "markdown>=3.10.2",
    "matplotlib>=3.10.8",
    "neo4j>=6.1.0",
    "notebook>=7.5.4",
    "numpy>=2.4.2",
    "openai>=2.26.0",
    "pandas>=3.0.1",
    "pypdf>=6.7.5",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "ragas>=0.4.3",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.3",
    "tqdm>=4.67.3",
    "transformers[sentencepiece,torch]>=5.3.0",
]
